--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   font_awesome_flutter: ^10.2.1
   firebase_core: ^1.23.0
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
