--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -83,26 +83,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # TODO fix this
-  # fonts:
-  #   - family: Forte
-  #     fonts:
-  #       - asset: fonts/forte.ttf
-  #   - family: bauhaus
-  #     fonts:
-  #       - asset: fonts/bauhausstd-medium.ttf
+  fonts:
+    - family: forte
+      fonts:
+        - asset: fonts/forte.ttf
+    - family: bauhaus
+      fonts:
+        - asset: fonts/bauhausstd-medium.otf
 
-
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
