--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
     sdk: flutter
   flutter_localizations: 
     sdk: flutter   
-  intl: any   
+  intl: any
+  flutter_speed_dial: ^3.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
