--- a/foodji_api/Application/Application.csproj
+++ b/foodji_api/Application/Application.csproj
@@ -8,11 +8,11 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="10.0.1" />
-      <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Infra\Infra.csproj" />
     </ItemGroup>
 
 </Project>
