--- a/foodji_api/Infra/Infra.csproj
+++ b/foodji_api/Infra/Infra.csproj
@@ -20,4 +20,8 @@
       <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
