--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   firebase_core: ^1.23.0
   faker: ^2.0.0
+  observable: ^0.24.0
 
 dev_dependencies:
   flutter_test:
