--- a/foodji_api/Application/Application.csproj
+++ b/foodji_api/Application/Application.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="MediatR" Version="10.0.1" />
-      <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Infra\Infra.csproj" />
     </ItemGroup>
 
 </Project>
