--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "Firebase": {
+      "Authority": "https://securetoken.google.com/foodji-auth",
+      "Audience": "foodji-auth"
+    }
+  }
 }
