--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Auth": {
     "Firebase": {
-      "GoogleApplicationCredentialsFile": "E:/School/Projet_2/Foodji/foodji_api/secrets/foodji-auth-google-credentials.json",
+      "CredentialsFile": "foodji-auth-google-credentials.json",
       "Authority": "https://securetoken.google.com/foodji-auth",
       "Audience": "foodji-auth"
     }
