Create Auth project in solution

--- a/foodji_api/Api/Api.csproj
+++ b/foodji_api/Api/Api.csproj
@@ -17,18 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Auth\Auth.csproj" />
     <ProjectReference Include="..\Infra\Infra.csproj" />
-  </ItemGroup>
-
-  <!--  Far from ideal as far as secret management goes, but for now, we're just copying the file in 
-        the output folder, just like what happens with the appsettings. Since it's added as a link, the file itself
-        remains in the gitignored secrets folder. Keep in mind that this will likely cause issues if the Api is to be
-         built in the pipeline.-->
-  <ItemGroup>
-    <Content Include="..\secrets\foodji-auth-google-credentials.json">
-      <Link>foodji-auth-google-credentials.json</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 
 </Project>
