--- a/foodji_api/Auth/Auth.csproj
+++ b/foodji_api/Auth/Auth.csproj
@@ -22,5 +22,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+    </ItemGroup>
 
 </Project>
