--- a/foodji_api/Api/appsettings.Development.json
+++ b/foodji_api/Api/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "Database": {
     "MongoDB" : {
-      "ConnectionString": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj@localhost:27017"
+      "ConnectionString": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
     }
   }
 }
