--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   faker: ^2.0.0
   observable: ^0.24.0
   file_picker: ^5.2.2
+  firebase_auth: ^3.11.2
+  firebase_ui_auth: ^1.0.0-dev.0
+  firebase_dart_flutter: ^1.0.1
+  firebase_dynamic_links: ^4.3.11
 
 dev_dependencies:
   flutter_test:
