remove https redirection

--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -12,5 +12,10 @@
       "Authority": "https://securetoken.google.com/foodji-auth",
       "Audience": "foodji-auth"
     }
+  },
+  "Database": {
+    "MongoDB" : {
+      "ConnectionString": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
+    }
   }
 }
