--- a/foodji_api/docker-compose.yml
+++ b/foodji_api/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.1'
 
 services:
-
-  mongo:
+  db:
+    container_name: foodji-db
     image: mongo
     restart: always
     ports:
@@ -16,6 +16,19 @@ services:
     secrets:
       - root_username
       - root_password
+
+  api:
+    container_name: foodji-api
+    restart: unless-stopped
+    ports:
+      - 7272:80
+    build:
+      context: .
+      dockerfile: ./Api/Dockerfile
+    depends_on:
+      - db
+    environment:
+      DB_ADDR: db
 
 # https://docs.docker.com/storage/volumes/
 volumes:
