Change json path for mongo prefix

--- a/foodji_api/Api/appsettings.Development.json
+++ b/foodji_api/Api/appsettings.Development.json
@@ -5,9 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database": {
-    "MongoDB" : {
-      "ConnectionString": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
-    }
+  "MongoDB": {
+    "ConnectionPrefix": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
   }
 }
