--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -14,8 +14,6 @@
     }
   },
   "Database": {
-    "MongoDB" : {
-      "ConnectionString": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
-    }
+      "ConnectionPrefix": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
   }
 }
