--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -13,7 +13,7 @@
       "Audience": "foodji-auth"
     }
   },
-  "Database": {
-      "ConnectionPrefix": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
+  "MongoDB": {
+    "ConnectionPrefix": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
   }
 }
