--- a/foodji_api/Api/appsettings.json
+++ b/foodji_api/Api/appsettings.json
@@ -12,5 +12,8 @@
       "Authority": "https://securetoken.google.com/foodji-auth",
       "Audience": "foodji-auth"
     }
+  },
+  "MongoDB": {
+    "ConnectionPrefix": "mongodb://foodji:i5gtMpq635nHNZQ&#okkd35cj"
   }
 }
