--- a/foodji_api/docker-compose.dev.yml
+++ b/foodji_api/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 version: '3.1'
 
 services:
-  db:
-    container_name: foodji-db
+
+  mongo:
     image: mongo
     restart: always
     ports:
@@ -17,22 +17,10 @@ services:
       - root_username
       - root_password
 
-  api:
-    container_name: foodji-web
-    restart: unless-stopped
-    ports:
-      - 7272:80
-    build:
-      context: .
-      dockerfile: ./Api/Dockerfile
-    depends_on:
-      - db
-    environment:
-      DB_ADDR: db
-
 # https://docs.docker.com/storage/volumes/
 volumes:
   database:
+
 
 secrets:
   root_username:
