--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   firebase_ui_auth: ^1.0.0-dev.0
   firebase_dart_flutter: ^1.0.1
   firebase_dynamic_links: ^4.3.11
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
