Fe/poc to json flutter get major (#41)
* add route to recipe saving

* Instancie les requests via service cubit

* F.S : [WIP] - AppRoutes updated

AppRoute updated to dynamic class with adjustable oken.

* F.S : [WIP] - Crud buttons

Back button working, all buttons should be functional. Services need work.

* F.S : WIP - JsonEncode issues

JSON Encode not working

* add json_serializable

* F.S : [WIP] JsonSerializable

JsonSerializable completed, required a flutter pub get force major updates. Now stuck with an SSL problem.

* F.S : [WIP] TODO nettoyés

Liste des TODO nettoyée de telle manière à ce que seuls les éléments d'actualité soient conservés.

* F.S : [WIP] SLL issue

AppLocalization and SSL issues.

* F.S : [WIP] Pre-favourite removal

* F.S : [WIP] 401 on posts

IsFavorite excluded successfully from jsonserializer

* F.S : TODO removed

* F.S : [WIP] Add still not working

* F.S : Nav bar fixed

* F.S : [WIP] Post, Put, Delete working

* F.S : Snackbar solved.

Post, Put, Delete all working, fixed issue with snackbar that was causing issue with return to previous menu.

* F.S : Fix multiples

Fixs de PR et fixs variés (images, null time, etc.)

* F.S : WIP Traduction

Pre-merge dev

* F.S : Last push

Tags with color fixed, pages completed, every page and function tested.

* F.S : Correctif du menu

Impossible que l'application build sur le develop actuel car la page de profil n'était pas importée dans celle de navigation. Cette situation est rectifiée.

* F.S : Retrait des termes inutiles

Traductions nettoyées.

* F.S : Requested modifications

Does NOT include modifications that should have been done in a previous PR (unrelated to this one).

* CR fixes and authentication typos

Co-authored-by: Guillaume Gervais <goglu.gervais@gmail.com>
Co-authored-by: Guillaume Gervais <guillaumeg023@gmail.com>
Co-authored-by: Mikaël H-Deschamps <mikael.hubert-deschamps@usherbrooke.ca>

--- a/foodji_ui/pubspec.yaml
+++ b/foodji_ui/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_localizations: 
     sdk: flutter   
   intl: any
-  flutter_speed_dial: ^3.0.5
+  flutter_speed_dial: ^6.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,14 +44,17 @@ dependencies:
   equatable: ^2.0.5
   http: ^0.13.5
   font_awesome_flutter: ^10.2.1
-  firebase_core: ^1.23.0
+  firebase_core: ^2.3.0
   faker: ^2.0.0
   observable: ^0.24.0
   file_picker: ^5.2.2
-  firebase_auth: ^3.11.2
+  firebase_auth: ^4.1.4
   firebase_ui_auth: ^1.0.0-dev.0
-  flutterfire_ui: ^0.3.0
-  firebase_dynamic_links: ^4.3.11
+  flutterfire_ui: ^0.4.3+20
+  firebase_dynamic_links: ^5.0.6
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
